problema cookie 84.17 1.4